--- a/helm-charts/pihole/templates/service.yml
+++ b/helm-charts/pihole/templates/service.yml
@@ -3,31 +3,39 @@ kind: Service
 metadata:
   name: {{ include "pihole.fullname" . }}
   namespace: {{ .Release.Namespace }}
-  labels:
-    {{- include "pihole.labels" . | nindent 4 }}
+spec:
+  # ClusterIP is internal-only, which is perfect for Ingress
+  type: ClusterIP
+  selector:
+    {{- include "pihole.selectorLabels" . | nindent 4 }}
+  ports:
+    - name: http
+      port: 80
+      targetPort: 80
+      protocol: TCP
+    - name: https
+      port: 443
+      targetPort: 443
+      protocol: TCP
+---
+# We create a separate NodePort service ONLY for DNS
+apiVersion: v1
+kind: Service
+metadata:
+  name: {{ include "pihole.fullname" . }}-dns
+  namespace: {{ .Release.Namespace }}
 spec:
   type: NodePort
-  # This selector MUST match the labels in deployment.yaml
   selector:
     {{- include "pihole.selectorLabels" . | nindent 4 }}
   ports:
     - name: dns-udp
       port: 53
-      protocol: UDP
       targetPort: 53
+      protocol: UDP
       nodePort: {{ .Values.service.dnsUdpPort }}
     - name: dns-tcp
       port: 53
-      protocol: TCP
       targetPort: 53
+      protocol: TCP
       nodePort: {{ .Values.service.dnsTcpPort }}
-    - name: http
-      port: 80
-      protocol: TCP
-      targetPort: 80
-      nodePort: {{ .Values.service.webPort }}
-    - name: https
-      port: 443
-      protocol: TCP
-      targetPort: 443
-      nodePort: {{ .Values.service.httpsPort }}
