--- a/helm-charts/pihole/values.yaml
+++ b/helm-charts/pihole/values.yaml
@@ -13,7 +13,10 @@ hostNetwork: false
 
 # Pi-hole v6 specific: Allow the pi.hole hostname
 extraEnv:
+  # This is the "Nuclear" option for Pi-hole v6 security
   FTLCONF_webserver_api_allowedHosts: "*"
+  # This ensures it knows it's behind a proxy
+  FTLCONF_webserver_api_trustedProxies: "10.42.0.0/16,10.43.0.0/16,192.168.1.0/24"
 
 persistence:
   storageClass: "local-path"
