--- a/helm-charts/pihole/templates/ingress.yaml
+++ b/helm-charts/pihole/templates/ingress.yaml
@@ -4,26 +4,42 @@ metadata:
   name: {{ include "pihole.fullname" . }}
   namespace: {{ .Release.Namespace }}
   annotations:
-    kubernetes.io/ingress.class: nginx
-    # This is the magic line for IP-based access
-    nginx.ingress.kubernetes.io/default-backend: {{ include "pihole.fullname" . }}
-    nginx.ingress.kubernetes.io/app-root: /admin
+    {{- toYaml .Values.ingress.annotations | nindent 4 }}
 spec:
-  ingressClassName: nginx
-  # Adding this block allows the IP address to work
-  defaultBackend:
-    service:
-      name: {{ include "pihole.fullname" . }}
-      port:
-        number: 80
+  ingressClassName: {{ .Values.ingress.className }}
+  {{- if .Values.ingress.tls }}
+  tls:
+    {{- range .Values.ingress.tls }}
+    - hosts:
+        {{- range .hosts }}
+        - {{ . | quote }}
+        {{- end }}
+      secretName: {{ .secretName }}
+    {{- end }}
+  {{- end }}
   rules:
-  - host: pi.hole
-    http:
-      paths:
-      - path: /
-        pathType: Prefix
-        backend:
-          service:
-            name: {{ include "pihole.fullname" . }}
-            port:
-              number: 80
+    # Rule 1: Handle requests for "pi.hole"
+    {{- range .Values.ingress.hosts }}
+    - host: {{ .host | quote }}
+      http:
+        paths:
+          {{- range .paths }}
+          - path: {{ .path }}
+            pathType: {{ .pathType }}
+            backend:
+              service:
+                name: {{ include "pihole.fullname" $ }}
+                port:
+                  number: 80
+          {{- end }}
+    {{- end }}
+    # Rule 2: Handle requests for the IP address (Catch-all)
+    - http:
+        paths:
+          - path: /
+            pathType: Prefix
+            backend:
+              service:
+                name: {{ include "pihole.fullname" . }}
+                port:
+                  number: 80
