--- a/helm-charts/pihole/values.yaml
+++ b/helm-charts/pihole/values.yaml
@@ -11,10 +11,12 @@ adminPassword: "correct horse battery staple"
 hostNetwork: false
 
 extraEnv:
-  # v6: Allow all hostnames (fixes the black 404)
+  # 1. This tells Pi-hole to accept ANY hostname (Safe because Ingress filters it first)
   FTLCONF_webserver_api_allowedHosts: "*"
-  # v6: Tell it to trust the Ingress network
-  FTLCONF_webserver_api_trustedProxies: "10.42.0.0/16,10.43.0.0/16,192.168.1.0/24"
+  # 2. Automatically trust the entire Kubernetes pod and service networks
+  FTLCONF_webserver_api_trustedProxies: "10.0.0.0/8,172.16.0.0/12,192.168.0.0/16"
+  # 3. Use the standard Pi-hole hostname
+  VIRTUAL_HOST: "pi.hole"
 
 persistence:
   storageClass: "local-path"
@@ -37,6 +39,9 @@ ingress:
     nginx.ingress.kubernetes.io/app-root: /admin
     # Important for v6 API stability
     nginx.ingress.kubernetes.io/proxy-body-size: "0"
+    kubernetes.io/ingress.class: nginx
+    # This is the "proper" way: tell Nginx to pass the hostname through to the pod
+    nginx.ingress.kubernetes.io/upstream-vhost: "pi.hole"
   hosts:
     - host: pi.hole
       paths:
