--- a/helm-charts/pihole/templates/deployment.yaml
+++ b/helm-charts/pihole/templates/deployment.yaml
@@ -15,24 +15,13 @@ spec:
       labels:
         {{- include "pihole.selectorLabels" . | nindent 8 }}
     spec:
-      # Use the node's network stack directly
       hostNetwork: {{ .Values.hostNetwork }}
-      # Required so the pod can still resolve Kubernetes internal services
       dnsPolicy: ClusterFirstWithHostNet
       containers:
       - name: pihole
         image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
         imagePullPolicy: {{ .Values.image.pullPolicy }}
-        ports:
-          - name: http
-            containerPort: 80
-            protocol: TCP
-          - name: dns-udp
-            containerPort: 53
-            protocol: UDP
-          - name: dns-tcp
-            containerPort: 53
-            protocol: TCP
+        # REMOVED the ports block to clear the 'Pending' port conflict
         env:
         - name: TZ
           value: {{ .Values.timezone | quote }}
@@ -40,14 +29,12 @@ spec:
           value: {{ .Values.adminPassword | quote }}
         - name: VIRTUAL_HOST
           value: "pi.hole"
-        # Pi-hole v6 Specific Configurations
         - name: FTLCONF_webserver_api_allowedHosts
           value: "*"
         - name: FTLCONF_webserver_servername
           value: "pi.hole"
         - name: FTLCONF_dns_override_pihole_address
           value: "192.168.1.42"
-        # Optional: Prevents redirection issues when behind an Ingress
         - name: FTLCONF_webserver_api_trustedProxies
           value: "10.42.0.0/16,10.43.0.0/16,192.168.1.0/24"
         volumeMounts:
@@ -56,7 +43,7 @@ spec:
         - name: dnsmasq-data
           mountPath: /etc/dnsmasq.d
         securityContext:
-          privileged: true # Required for some hostNetwork operations on RPi
+          privileged: true 
           capabilities:
             add: ["NET_ADMIN", "SYS_NICE", "CHOWN"]
       volumes:
