--- a/helm-charts/pihole/templates/deployment.yaml
+++ b/helm-charts/pihole/templates/deployment.yaml
@@ -15,13 +15,15 @@ spec:
       labels:
         {{- include "pihole.selectorLabels" . | nindent 8 }}
     spec:
+      # Binds the Pod directly to the Raspberry Pi network stack
       hostNetwork: {{ .Values.hostNetwork }}
+      # Allows the pod to resolve internal K8s services while on hostNetwork
       dnsPolicy: ClusterFirstWithHostNet
       containers:
       - name: pihole
         image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
         imagePullPolicy: {{ .Values.image.pullPolicy }}
-        # REMOVED the ports block to clear the 'Pending' port conflict
+        # We do not define 'ports' here to avoid scheduler conflicts with Nginx on Port 80
         env:
         - name: TZ
           value: {{ .Values.timezone | quote }}
@@ -29,23 +31,29 @@ spec:
           value: {{ .Values.adminPassword | quote }}
         - name: VIRTUAL_HOST
           value: "pi.hole"
-        - name: FTLCONF_webserver_api_allowedHosts
-          value: "*"
-        - name: FTLCONF_webserver_servername
-          value: "pi.hole"
+        
+        # DYNAMIC IP DETECTION: 
+        # Grabs the Raspberry Pi's physical IP and tells Pi-hole to use it for 'pi.hole'
         - name: FTLCONF_dns_override_pihole_address
-          value: "192.168.1.42"
-        - name: FTLCONF_webserver_api_trustedProxies
-          value: "10.42.0.0/16,10.43.0.0/16,192.168.1.0/24"
+          valueFrom:
+            fieldRef:
+              fieldPath: status.hostIP
+
+        # Map all other variables from values.yaml
+        {{- range $key, $value := .Values.extraEnv }}
+        - name: {{ $key }}
+          value: {{ $value | quote }}
+        {{- end }}
+
         volumeMounts:
         - name: pihole-data
           mountPath: /etc/pihole
         - name: dnsmasq-data
           mountPath: /etc/dnsmasq.d
+        
         securityContext:
-          privileged: true 
-          capabilities:
-            add: ["NET_ADMIN", "SYS_NICE", "CHOWN"]
+          {{- toYaml .Values.securityContext | nindent 10 }}
+          
       volumes:
       - name: pihole-data
         persistentVolumeClaim:
