--- a/helm-charts/pihole/templates/deployment.yaml
+++ b/helm-charts/pihole/templates/deployment.yaml
@@ -2,45 +2,32 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: {{ include "pihole.fullname" . }}
-  namespace: {{ .Release.Namespace }}
 spec:
   strategy:
     type: Recreate
-  replicas: 1
-  selector:
-    matchLabels:
-      {{- include "pihole.selectorLabels" . | nindent 6 }}
   template:
-    metadata:
-      labels:
-        {{- include "pihole.selectorLabels" . | nindent 8 }}
     spec:
-      hostNetwork: {{ .Values.hostNetwork }}
+      hostNetwork: true
       dnsPolicy: ClusterFirstWithHostNet
       containers:
       - name: pihole
         image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
-        imagePullPolicy: {{ .Values.image.pullPolicy }}
         env:
         - name: TZ
           value: {{ .Values.timezone | quote }}
         - name: WEBPASSWORD
           value: {{ .Values.adminPassword | quote }}
-        - name: VIRTUAL_HOST
-          value: "pi.hole"
         
-        # DYNAMIC IP OVERRIDE: Tells Pi-hole to use the Pi's IP for DNS
-        - name: FTLCONF_dns_piholeAddress
+        # DYNAMIC IP: Tells Pi-hole to reply as the physical Pi IP
+        - name: FTLCONF_dns_reply_host_IPv4
           valueFrom:
             fieldRef:
               fieldPath: status.hostIP
 
-        # Map variables from values.yaml
         {{- range $key, $value := .Values.extraEnv }}
         - name: {{ $key }}
           value: {{ $value | quote }}
         {{- end }}
-
         volumeMounts:
         - name: pihole-data
           mountPath: /etc/pihole
