--- a/helm-charts/pihole/values.yaml
+++ b/helm-charts/pihole/values.yaml
@@ -11,15 +11,13 @@ adminPassword: "correct horse battery staple"
 hostNetwork: true
 
 extraEnv:
-  # v6.4+ Correct Syntax (Matches the [dns] and [webserver] sections)
+  # Use the exact keys the log recognized as valid
   FTLCONF_dns_listeningMode: "all"
   FTLCONF_dns_hostRecord: "false"
-  
-  # This replaces 'allowedHosts: *' and fixes the 404
   FTLCONF_webserver_serve_all: "true"
   
-  # v6.4+ Trusted Proxies syntax
-  FTLCONF_webserver_api_trustedProxies: "10.0.0.0/8,172.16.0.0/12,192.168.0.0/16"
+  # The log rejected 'api_trustedProxies'. v6.4 often uses the flat structure:
+  FTLCONF_webserver_trustedProxies: "10.0.0.0/8,172.16.0.0/12,192.168.0.0/16"
 
 securityContext:
   privileged: true
