--- a/helm-charts/pihole/templates/deployment.yaml
+++ b/helm-charts/pihole/templates/deployment.yaml
@@ -2,35 +2,40 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: {{ include "pihole.fullname" . }}
+  namespace: {{ .Release.Namespace }}
 spec:
   strategy:
     type: Recreate
+  replicas: 1
+  selector:
+    matchLabels:
+      {{- include "pihole.selectorLabels" . | nindent 6 }}
   template:
+    metadata:
+      labels:
+        {{- include "pihole.selectorLabels" . | nindent 8 }}
     spec:
-      hostNetwork: true
+      hostNetwork: {{ .Values.hostNetwork }}
       dnsPolicy: ClusterFirstWithHostNet
       containers:
       - name: pihole
         image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
+        imagePullPolicy: {{ .Values.image.pullPolicy }}
         env:
         - name: TZ
           value: {{ .Values.timezone | quote }}
         - name: WEBPASSWORD
           value: {{ .Values.adminPassword | quote }}
-        # This is the standard v6 PTR setting the log suggested
+        # Standard v6 setting to identify as pi.hole
         - name: FTLCONF_dns_piholePTR
           value: "PI.HOLE"
         
-        # DYNAMIC IP: Tells Pi-hole to reply as the physical Pi IP
-        - name: FTLCONF_dns_reply_host_IPv4
-          valueFrom:
-            fieldRef:
-              fieldPath: status.hostIP
-
+        # Pull any extra vars from values.yaml
         {{- range $key, $value := .Values.extraEnv }}
         - name: {{ $key }}
           value: {{ $value | quote }}
         {{- end }}
+
         volumeMounts:
         - name: pihole-data
           mountPath: /etc/pihole
