--- a/helm-charts/pihole/templates/deployment.yaml
+++ b/helm-charts/pihole/templates/deployment.yaml
@@ -26,9 +26,15 @@ spec:
           value: {{ .Values.timezone | quote }}
         - name: WEBPASSWORD
           value: {{ .Values.adminPassword | quote }}
-        # Standard v6 setting to identify as pi.hole
-        - name: FTLCONF_dns_piholePTR
-          value: "PI.HOLE"
+        # Official Key: [dns.reply.host] IPv4
+        - name: FTLCONF_dns_reply_host_IPv4
+          valueFrom:
+            fieldRef:
+              fieldPath: status.hostIP
+        {{- range $key, $value := .Values.extraEnv }}
+        - name: {{ $key }}
+          value: {{ $value | quote }}
+        {{- end }}
         
         # Pull any extra vars from values.yaml
         {{- range $key, $value := .Values.extraEnv }}
