--- a/helm-charts/pihole/templates/service.yml
+++ b/helm-charts/pihole/templates/service.yml
@@ -3,9 +3,13 @@ kind: Service
 metadata:
   name: {{ include "pihole.fullname" . }}
   namespace: {{ .Release.Namespace }}
+  annotations:
+    # This helps Nginx Ingress find the pod quickly on hostNetwork
+    prometheus.io/scrape: "true"
+    prometheus.io/port: "80"
 spec:
-  # ClusterIP is internal-only, which is perfect for Ingress
   type: ClusterIP
+  # Internal traffic only - this is what the Ingress talks to
   selector:
     {{- include "pihole.selectorLabels" . | nindent 4 }}
   ports:
@@ -17,15 +21,23 @@ spec:
       port: 443
       targetPort: 443
       protocol: TCP
+
 ---
-# We create a separate NodePort service ONLY for DNS
+
 apiVersion: v1
 kind: Service
 metadata:
   name: {{ include "pihole.fullname" . }}-dns
   namespace: {{ .Release.Namespace }}
+  annotations:
+    # If you use MetalLB, this allows both TCP and UDP on the same IP
+    metallb.universe.tf/allow-shared-ip: pihole-svc
 spec:
+  # Using LoadBalancer is fine, but it will stay 'Pending' if MetalLB isn't set up.
+  # If it stays pending, change 'LoadBalancer' to 'NodePort'.
   type: LoadBalancer
+  # If you have an IP you want to fix for your router, uncomment the next line:
+  # loadBalancerIP: 192.168.1.252 
   selector:
     {{- include "pihole.selectorLabels" . | nindent 4 }}
   ports:
@@ -37,3 +49,8 @@ spec:
       port: 53
       targetPort: 53
       protocol: TCP
+    # Port 123 is required for Pi-hole v6 NTP sync shown in your logs
+    - name: ntp-udp
+      port: 123
+      targetPort: 123
+      protocol: UDP
