--- a/helm-charts/pihole/templates/ingress.yaml
+++ b/helm-charts/pihole/templates/ingress.yaml
@@ -1,41 +1,47 @@
+{{- if .Values.ingress.enabled -}}
+{{- /* We use '-web' to match the updated Service name */ -}}
+{{- $serviceName := printf "%s-%s" (include "pihole.fullname" .) "web" -}}
+{{- $ingressPath := .Values.ingress.path -}}
+{{- $pathType := .Values.ingress.pathType -}}
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: {{ include "pihole.fullname" . }}
   namespace: {{ .Release.Namespace }}
+  labels:
+    {{- include "pihole.labels" . | nindent 4 }}
   annotations:
-    {{- toYaml .Values.ingress.annotations | nindent 4 }}
+    # Essential for Pi-hole v6: Force the Host header to 'pi.hole'
+    # This prevents the "404 Page Not Found" black screen.
+    nginx.ingress.kubernetes.io/upstream-vhost: "pi.hole"
+    
+    # Standard Nginx optimizations for Pi-hole
+    nginx.ingress.kubernetes.io/ssl-redirect: "false"
+    nginx.ingress.kubernetes.io/proxy-body-size: "0"
+    
+    # Inject any custom annotations from values.yaml
+    {{- with .Values.ingress.annotations }}
+    {{- toYaml . | nindent 4 }}
+    {{- end }}
 spec:
-  ingressClassName: {{ .Values.ingress.className }}
+  {{- if .Values.ingress.ingressClassName }}
+  ingressClassName: {{ .Values.ingress.ingressClassName }}
+  {{- end }}
   {{- if .Values.ingress.tls }}
   tls:
-    {{- range .Values.ingress.tls }}
-    - hosts:
-        {{- range .hosts }}
-        - {{ . | quote }}
-        {{- end }}
-      secretName: {{ .secretName }}
-    {{- end }}
+    {{- toYaml .Values.ingress.tls | nindent 4 }}
   {{- end }}
   rules:
-    # Handle the hostname pi.hole
-    - host: "pi.hole"
+    {{- range .Values.ingress.hosts }}
+    - host: {{ . | quote }}
       http:
         paths:
-          - path: /
-            pathType: Prefix
+          - path: {{ $ingressPath }}
+            pathType: {{ $pathType }}
             backend:
               service:
-                name: {{ include "pihole.fullname" . }}
-                port:
-                  number: 80
-    # Handle the IP address access directly
-    - http:
-        paths:
-          - path: /
-            pathType: Prefix
-            backend:
-              service:
-                name: {{ include "pihole.fullname" . }}
-                port:
-                  number: 80
+                name: {{ $serviceName }}
+                port: 
+                  name: http
+    {{- end }}
+{{- end }}
