--- a/helm-charts/pihole/templates/pvc.yaml
+++ b/helm-charts/pihole/templates/pvc.yaml
@@ -1,27 +1,29 @@
+# Core Pi-hole Data (Config, DBs, and Logs)
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
   name: {{ include "pihole.fullname" . }}-data
   namespace: {{ .Release.Namespace }}
-  labels:
-    {{- include "pihole.labels" . | nindent 4 }}
 spec:
-  storageClassName: {{ .Values.persistence.storageClass }}
-  accessModes: ["ReadWriteOnce"]
+  accessModes:
+    - ReadWriteOnce
+  storageClassName: {{ .Values.persistentVolumeClaim.storageClass | quote }}
   resources:
     requests:
-      storage: {{ .Values.persistence.pihole.size }}
+      storage: 2Gi
+
 ---
+
+# Dnsmasq configuration snippets
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
   name: {{ include "pihole.fullname" . }}-dnsmasq
   namespace: {{ .Release.Namespace }}
-  labels:
-    {{- include "pihole.labels" . | nindent 4 }}
 spec:
-  storageClassName: {{ .Values.persistence.storageClass }}
-  accessModes: ["ReadWriteOnce"]
+  accessModes:
+    - ReadWriteOnce
+  storageClassName: {{ .Values.persistentVolumeClaim.storageClass | quote }}
   resources:
     requests:
-      storage: {{ .Values.persistence.dnsmasq.size }}
+      storage: 1Gi
