--- a/helm-charts/pihole/templates/service.yml
+++ b/helm-charts/pihole/templates/service.yml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: {{ include "pihole.fullname" . }}-web
+  namespace: {{ .Release.Namespace }}
 spec:
   type: ClusterIP
   selector:
@@ -10,13 +11,22 @@ spec:
     - name: http
       port: 80
       targetPort: 80
+      protocol: TCP
+
 ---
+
 apiVersion: v1
 kind: Service
 metadata:
   name: {{ include "pihole.fullname" . }}-dns
+  namespace: {{ .Release.Namespace }}
+  annotations:
+    # Essential for MetalLB to use the same IP for TCP/UDP
+    metallb.universe.tf/allow-shared-ip: pihole-svc
 spec:
   type: LoadBalancer
+  # Use your requested static IP here
+  loadBalancerIP: 192.168.178.252 
   selector:
     {{- include "pihole.selectorLabels" . | nindent 4 }}
   ports:
@@ -24,3 +34,7 @@ spec:
       port: 53
       targetPort: 53
       protocol: UDP
+    - name: dns-tcp
+      port: 53
+      targetPort: 53
+      protocol: TCP
