--- a/helm-charts/pihole/values.yaml
+++ b/helm-charts/pihole/values.yaml
@@ -28,7 +28,7 @@ ingress:
 # Persistence (Adjust StorageClass to yours, e.g., glusterfs-storage)
 persistentVolumeClaim:
   enabled: true
-  storageClass: "glusterfs-storage" 
+  storageClass: "local-path"
 
 # Your Lists from GitHub
 adlists:
